增加日志模块，配置模块组件等

--- a/erwin-component-common-parent/pom.xml
+++ b/erwin-component-common-parent/pom.xml
@@ -13,9 +13,12 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>erwin-component-common</module>
         <module>erwin-component-common-jpa</module>
         <module>erwin-component-common-redis</module>
-        <module>erwin-component-common</module>
+        <module>erwin-component-common-aop</module>
+        <module>erwin-component-common-ip2region</module>
+        <module>erwin-component-common-mybatis-plus</module>
     </modules>
 
 </project>
