--- a/erwin-component-common-parent/erwin-component-common/pom.xml
+++ b/erwin-component-common-parent/erwin-component-common/pom.xml
@@ -16,5 +16,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-rng-simple</artifactId>
+            <version>${commons-rng.version}</version>
+        </dependency>
     </dependencies>
 </project>
