--- a/erwin-component-common-parent/erwin-component-common-mybatis-plus/pom.xml
+++ b/erwin-component-common-parent/erwin-component-common-mybatis-plus/pom.xml
@@ -13,14 +13,26 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>${mybatis-plus.version}</version>
+            <groupId>com.fengwenyi</groupId>
+            <artifactId>erwin-component-common</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.fengwenyi</groupId>
-            <artifactId>erwin-component-common</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mybatis</groupId>
+                    <artifactId>mybatis-spring</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>${mybatis-spring.version}</version>
         </dependency>
     </dependencies>
 
