--- a/erwin-component-common-parent/erwin-component-common/pom.xml
+++ b/erwin-component-common-parent/erwin-component-common/pom.xml
@@ -27,5 +27,11 @@
             <artifactId>commons-rng-simple</artifactId>
             <version>${commons-rng.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
     </dependencies>
 </project>
