--- a/erwin-component-config/pom.xml
+++ b/erwin-component-config/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.fengwenyi</groupId>
         <artifactId>erwin-component</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>erwin-component-config</artifactId>
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.fengwenyi</groupId>
-            <artifactId>erwin-component-common-jpa</artifactId>
+            <artifactId>erwin-component-common-mybatis-plus</artifactId>
         </dependency>
 
         <dependency>
