--- a/erwin-component-common-parent/erwin-component-common-validation/pom.xml
+++ b/erwin-component-common-parent/erwin-component-common-validation/pom.xml
@@ -9,18 +9,12 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>erwin-component-common-mybatis-plus</artifactId>
+    <artifactId>erwin-component-common-validation</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.fengwenyi</groupId>
-            <artifactId>erwin-component-common</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
-            <version>${mybatis-plus.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
