--- a/erwin-component-common-parent/pom.xml
+++ b/erwin-component-common-parent/pom.xml
@@ -19,6 +19,7 @@
 <!--        <module>erwin-component-common-aop</module>-->
 <!--        <module>erwin-component-common-ip2region</module>-->
         <module>erwin-component-common-mybatis-plus</module>
+        <module>erwin-component-common-validation</module>
     </modules>
 
 </project>
