--- a/erwin-component-sample-parent/sample-config/pom.xml
+++ b/erwin-component-sample-parent/sample-config/pom.xml
@@ -9,18 +9,17 @@
         <version>${revision}</version>
     </parent>
 
-    <artifactId>sample-redis</artifactId>
+    <artifactId>sample-config</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.fengwenyi</groupId>
-            <artifactId>erwin-component-common-redis</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
+            <groupId>com.fengwenyi</groupId>
+            <artifactId>erwin-component-config</artifactId>
         </dependency>
     </dependencies>
-
 </project>
